igt@i915_module_load@load - dmesg-warn - drm_WARN_ON(lpt_iclkip_freq(&p) != clock), WARNING: .* at drivers/gpu/drm/i915/display/intel_pch_refclk.c:\d+ lpt_program_iclkip
https://intel-gfx-ci.01.org/tree/drm-tip/Patchwork_105134v1/fi-hsw-4770/igt@i915_module_load@load.html#dmesg-warnings415
<4> [25.955765] i915 0000:00:02.0: drm_WARN_ON(lpt_iclkip_freq(&p) != clock)
<4> [25.955785] WARNING: CPU: 3 PID: 99 at drivers/gpu/drm/i915/display/intel_pch_refclk.c:182 lpt_program_iclkip+0x268/0x2f0 [i915]
<4> [25.955997] Modules linked in: i915 ttm drm_buddy drm_display_helper drm_kms_helper syscopyarea sysfillrect sysimgblt fb_sys_fops prime_numbers fuse mei_hdcp x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul ghash_clmulni_intel mei_me e1000e mei i2c_i801 ptp lpc_ich i2c_smbus pps_core
<4> [25.956052] CPU: 3 PID: 99 Comm: kworker/u16:4 Not tainted 5.19.0-rc2-Patchwork_105134v1-ga2644b16f1f0+ #1
<4> [25.956055] Hardware name: LENOVO 10AGS00601/SHARKBAY, BIOS FBKT34AUS 04/24/2013
<4> [25.956058] Workqueue: events_unbound async_run_entry_fn
<4> [25.956065] RIP: 0010:lpt_program_iclkip+0x268/0x2f0 [i915]
<4> [25.956215] Code: 4c 8b 67 50 4d 85 e4 75 03 4c 8b 27 e8 11 47 44 e1 48 c7 c1 f8 e1 42 a0 4c 89 e2 48 c7 c7 46 4b 45 a0 48 89 c6 e8 c9 28 7c e1 <0f> 0b e9 5c fe ff ff 48 8b 7b 08 4c 8b 67 50 4d 85 e4 75 03 4c 8b
<4> [25.956217] RSP: 0018:ffffc900003cb770 EFLAGS: 00010282
<4> [25.956221] RAX: 0000000000000000 RBX: ffff88811b720000 RCX: 0000000000000001
<4> [25.956224] RDX: 0000000080000001 RSI: ffffffff8231fc9d RDI: 00000000ffffffff
<4> [25.956226] RBP: 000000000000fde8 R08: 0000000000000001 R09: 0000000000000001
<4> [25.956228] R10: ffff88841ed1208d R11: 0000000000000001 R12: ffff88810174b610
<4> [25.956230] R13: ffff88811b720000 R14: 0000000000000000 R15: ffff888104ce3800
<4> [25.956232] FS: 0000000000000000(0000) GS:ffff88840e980000(0000) knlGS:0000000000000000
<4> [25.956234] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [25.956236] CR2: 000055a222292120 CR3: 0000000006612001 CR4: 00000000001706e0
<4> [25.956238] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4> [25.956240] DR3: 0000000000000000 DR6: 00000000fffe0ff0 DR7: 0000000000000400
<4> [25.956242] Call Trace:
<4> [25.956244] <TASK>
<4> [25.956252] lpt_pch_enable+0x38/0x160 [i915]
<4> [25.956376] hsw_enable_crt+0x4b/0xe0 [i915]
<4> [25.956501] intel_encoders_enable+0x7b/0xa0 [i915]
<4> [25.956627] hsw_crtc_enable+0x1c5/0x610 [i915]
<4> [25.956757] intel_enable_crtc+0x58/0x90 [i915]
<4> [25.956882] intel_commit_modeset_enables+0x4e/0x70 [i915]
<4> [25.957090] intel_atomic_commit_tail+0x6b9/0x1a20 [i915]
<4> [25.957275] ? intel_atomic_commit+0x36f/0x3e0 [i915]
<4> [25.957407] ? intel_atomic_commit+0x32a/0x3e0 [i915]
<4> [25.957547] intel_atomic_commit+0x36f/0x3e0 [i915]
<4> [25.957669] drm_atomic_commit+0x8f/0xc0
<4> [25.957674] ? drm_plane_get_damage_clips.cold.5+0x1c/0x1c
<4> [25.957682] drm_client_modeset_commit_atomic+0x22b/0x270
<4> [25.957707] drm_client_modeset_commit_locked+0x52/0x180
<4> [25.957713] drm_client_modeset_commit+0x1c/0x40
<4> [25.957718] __drm_fb_helper_restore_fbdev_mode_unlocked+0x88/0xb0 [drm_kms_helper]
<4> [25.957733] drm_fb_helper_set_par+0x34/0x40 [drm_kms_helper]
<4> [25.957742] intel_fbdev_set_par+0x11/0x40 [i915]
<4> [25.957868] ? con_is_visible+0x22/0x30
<4> [25.957873] fbcon_init+0x275/0x4f0
<4> [25.957882] visual_init+0xc9/0x130
<4> [25.957888] do_bind_con_driver+0x1e5/0x2d0
<4> [25.957947] do_take_over_console+0x10e/0x180
<4> [25.957957] do_fbcon_takeover+0x53/0xb0
<4> [25.957960] fbcon_fb_registered+0xee/0x140
<4> [25.957965] register_framebuffer+0x1fc/0x2b0
<4> [25.957978] __drm_fb_helper_initial_config_and_unlock+0x37a/0x570 [drm_kms_helper]
<4> [25.957997] intel_fbdev_initial_config+0xf/0x20 [i915]
<4> [25.958126] async_run_entry_fn+0x2b/0x130
<4> [25.958134] process_one_work+0x275/0x5c0
<4> [25.958148] worker_thread+0x37/0x370
<4> [25.958155] ? process_one_work+0x5c0/0x5c0
<4> [25.958159] kthread+0xef/0x120
<4> [25.958162] ? kthread_complete_and_exit+0x20/0x20
<4> [25.958168] ret_from_fork+0x22/0x30
<4> [25.958189] </TASK>
<4> [25.958191] irq event stamp: 190589
<4> [25.958193] hardirqs last enabled at (190595): [<ffffffff81131d37>] vprintk_emit+0x377/0x3a0
<4> [25.958196] hardirqs last disabled at (190600): [<ffffffff81131ce6>] vprintk_emit+0x326/0x3a0
<4> [25.958199] softirqs last enabled at (189964): [<ffffffff81e0032d>] __do_softirq+0x32d/0x493
<4> [25.958204] softirqs last disabled at (189959): [<ffffffff810b8f56>] irq_exit_rcu+0xa6/0xe0
<4> [25.958208] ---[ end trace 0000000000000000 ]---